Thu, 30 Aug 2007 12:03:24 +0200 <thp@perli.net>
Remove obsolete documentation in doc/dev; cosmetic changes

	* data/po/Makefile: Upgrade to GPLv3
	* data/po/README: Mention i18n page on gPodder's website
	* doc/dev/build-deps-breezy.txt: Removed
	* doc/dev/debian.txt: Removed
	* doc/dev/i18n.txt: Removed
	* doc/dev/porting.txt: Removed
	* doc/dev/svncl.sed: Upgrade to GPLv3; modify look added and removed
	files

Wed, 29 Aug 2007 20:26:50 +0200 <thp@perli.net>
Upgrade to the GNU General Public License, Version 3

	* bin/gpodder: Upgrade to GPLv3
	* COPYING: Upgrade to GPLv3
	* doc/dev/copyright_notice: Upgrade to GPLv3
	* Makefile: Upgrade to GPLv3
	* README: Upgrade to GPLv3
	* setup.py: Upgrade to GPLv3
	* src/gpodder/*.py: Upgrade to GPLv3 (except for SimpleGladeApp and
	cache, as these are LGPL or other and do not originate from gPodder)

Wed, 29 Aug 2007 19:32:22 +0200 <thp@perli.net>
Integration changes, commit and ChangeLog migration

	* doc/dev/svncl.sed: Use tabs instead of 8 spaces for ChangeLog edit
	* Makefile: Make $EDITOR edit "ChangeLog" directly

Wed, 29 Aug 2007 19:17:36 +0200 <thp@perli.net>
Last batch of experimental change merges (up to svn r398)

	* doc/dev/tepache-howto.txt: Removed
	* doc/dev/tepache: Removed
	* src/gpodder/gui.py.orig: Removed
	* src/gpodder/libwget.py: Send progress = 0.0 on inital status update
	* src/gpodder/libpodcasts.py: Try to get episode metadata from several
	different properties of the corresponding feedparser entries; warn
	user when we couldn't get the episode title and try to get the episode
	title from the filename of the URL if we still have not found an
	episode title
	* src/gpodder/libgpodder.py: Add get_device_name() that returns a
	"nice" representative string of the currently selected device that can
	be used to represent the device in the GUI
	* src/gpodder/util.py: Return "(unknown)" string when bytesize in
	format_filesize() when the size has a negative value; make